# babeldoc-desktop

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  DESIGN.md  LICENSE  README.md  build.py  check_deps.py  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py
.github/workflows/: release.yml
docs/: RELEASING.md  TEST_REPORT.md  configuration.md  development.md  getting-started.md  index.md  security.md  translation.md  troubleshooting.md
docs/stylesheets/: extra.css
hooks/: hook-onnxruntime.py  hook-tiktoken.py  pyi_rth_tiktoken.py
python-backend/: main.py  requirements.txt  server.py  sidecar_entry.py  translator.py
resources/: version_info.txt
resources/icons/: icon.icns
scripts/: build-python.sh  create_icons.py  test_app.py
src/: App.vue  app.py  main.py  main.ts  version.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: files.rs  mod.rs  settings.rs  translation.rs
src/assets/styles/: global.css
src/models/: settings.py  translation.py
src/services/: settings_service.py  translation_request_factory.py  translation_service.py
src/stores/: index.ts  settingsStore.ts  settings_store.py  translationStore.ts  translation_store.py
src/types/: events.ts  index.ts  settings.ts
src/ui/: main_window.py
src/utils/: config.py  constants.py  file_utils.py  multiprocessing_smoke.py
tests/: test_packaging.py  test_release_configuration.py  test_secure_config.py  test_settings_ui.py  test_translation_runtime.py
(+27 files in other folders)
